# linon

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build_wasm.sh  index.html  linon.d.ts  linon.js  linon_bg.wasm  linon_bg.wasm.d.ts  shell.nix
.github/workflows/: CICD.yml
presentation/: Interactive Exploration of Nonlinear Ray Casting.pptx
public/: index.html
report/: .gitattributes  Practical.bib  Practical.tex  Streaming.bib  bibliography-mimosis.tex  mimosis.cls  notes.tex
report/Sources/: 0-1-DeclarationOfAuthorship.tex  0-2-Abstract.tex  1-Introduction.tex  2-Approach.tex  3-Results.tex  4-Conclusion.tex
src/: application.rs  arcball.rs  camera.rs  compute.wgsl  cornell_box.rs  display.wgsl  egui_wgpu.rs  functions.rs  gui.rs  lyapunov.wgsl  main.rs  main_view.rs  main_view.wgsl  overlay.wgsl  ray_samples.rs  reference_view.rs  reference_view.wgsl  ridge_extraction.wgsl  syntax_highlighting.rs  texture.rs  vertices.rs
