[package]
name = "linon"
version = "1.0.0"
authors = ["Niklas Korz <niklas@niklaskorz.de>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
winit = "0.28"
cgmath = "0.18"
log = "0.4"
futures = "0.3"
bytemuck = { version = "1.5", features = ["derive"] }
anyhow = "1.0"
tobj = "3.0"
egui = "0.21"
egui-wgpu = "0.21"
wgpu = "0.16"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
enum-map = "2.4.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = "0.21"
notify = "5.0.0"
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-winit = { version = "0.21", default-features = false, features = ["links"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = "0.3.61"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"

[features]

[patch.crates-io]
egui = { git = "https://github.com/niklaskorz/egui.git", rev = "732c8b1850c94ae5de76c45398b1929147670d44" }
egui-wgpu = { git = "https://github.com/niklaskorz/egui.git", rev = "732c8b1850c94ae5de76c45398b1929147670d44" }
egui-winit = { git = "https://github.com/niklaskorz/egui.git", rev = "732c8b1850c94ae5de76c45398b1929147670d44" }

